--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.4.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server-express": "^2.15.0",
+    "bootstrap": "^4.6.0",
+    "graphql": "^15.7.2",
+    "graphql-tag": "^2.12.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
